--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "redis": "^4.2.0",
+    "share": "^0.6.3",
+    "sharedb": "^3.0.0"
   }
 }
